Opened 16 years ago

Closed 12 years ago

#1592 closed bug (fixed)

Query windows doesn't update while restoring file from trash ...

Reported by: rdmr Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #7709
Platform: All

Description

Create a file on desktop and search the same file with Find. Leave query window open. Now move the file,you have created, to trash. You see that the file in query window is also disappeared. Till here everything is normal. But when you try to restore the file to the desktop,while the query window still open, you see that it doesn't update the query window.

Change History (4)

comment:1 by diver, 13 years ago

Component: - GeneralApplications/Tracker

Can't reproduce it in hrev41908. Tracker crashes instead.

comment:2 by anevilyak, 13 years ago

Owner: changed from axeld to anevilyak
Status: newassigned
Version: R1/pre-alpha1R1/Development

comment:3 by anevilyak, 13 years ago

Blocking: 7709 added

(In #7709) Duplicate of #1592, as pointed out by diver.

comment:4 by stpere, 12 years ago

Resolution: fixed
Status: assignedclosed

fixed in hrev44378.

Note: See TracTickets for help on using tickets.